[tool.poetry]
name = "audio-collage"
version = "0.1.0"
description = ""
authors = ["Jesse Bordoe <jesse.bordoe@gmail.com>"]
readme = "README.md"
packages = [{include = "audio_collage"}]

[tool.poetry.dependencies]
python = "^3.9"
audioread = "^3.0.0"
caribou = "^0.2.1"
cffi = "^1.15.1"
cycler = "^0.11.0"
decorator = "^5.1.1"
dtw = "^1.4.0"
joblib = "^1.2.0"
kiwisolver = "^1.4.4"
librosa = "^0.9.2"
llvmlite = "^0.39.1"
matplotlib = "^3.6.0"
numba = "^0.56.2"
numpy = "^1.23.3"
pycparser = "^2.21"
pyparsing = "^3.0.9"
pyprof2calltree = "^1.4.5"
python-dateutil = "^2.8.2"
resampy = "^0.4.2"
scikit-learn = "^1.1.2"
six = "^1.16.0"
soundfile = "^0.11.0"
vptree = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
